@@ -193,11 +193,9 @@ network.extract<-function(x,onset=NULL,terminus=NULL,length=NULL, at=NULL,
     # truncate the observations to the onset and terminus value
     obs<-net.obs.period$observations
     # subset to just spells that intersect query period
-    if (onset==terminus){
-      obs<-obs[sapply(obs,function(ob){ob[1]<=terminus &ob[2]>onset})]
-    } else { 
-      obs<-obs[sapply(obs,function(ob){ob[1]<terminus &ob[2]>onset})]
-    }
+    
+    obs<-obs[sapply(obs,function(ob){spells.overlap(ob,c(onset,terminus))})]
+    
     
     if (length(obs)>0){
       # modify the onset of the first and terminus of the last but don't expand
